# EmbedUnitTestsExample

./: CMakeLists.txt  makefile
include/util/: RuntimeError.h
src/: LedDriver.c  LedDriver.h  awesome_header.c  awesome_header.h  main.c
test/: AwesomeUT.cpp  LedDriverTest.c  main.cpp
test/mock/: RuntimeErrorStub.c  RuntimeErrorStub.h
test/test_runners/: LedDriverTest_Runner.c  all_tests.c
